--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
-    <meta name="description" content="">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shoelace-css/1.0.0-beta10/shoelace.css">
+    <meta name="description" content="">    
     <script src="https://use.fontawesome.com/9f1ccc6a33.js"></script>
     {{ getHeadHtml() }}
-    <link href="{{ siteUrl }}css/main.bundle.css" rel="stylesheet"></head>
-    <link rel="stylesheet" href="{{ siteUrl }}bower_components/prism/themes/prism-okaidia.css">
+  <link href="/css/main.bundle.css" rel="stylesheet"></head>
 <body id="siteWrapper" {% if bodyClass is defined %}class="{{ bodyClass }}"{% endif %}>
   {% block body %}{% endblock %}
 	{% block foot %}{% endblock %}
-<script type="text/javascript" src="{{ siteUrl }}js/main.bundle.js"></script></body>
+<script type="text/javascript" src="/js/main.bundle.js"></script></body>
 </html>
