--- a/templates/_includes/_article-list.html
+++ b/templates/_includes/_article-list.html
@@ -1,4 +1,4 @@
-<div id="pageBody">
+<div id="pageBody" class="pageCenterBlockContainer">
 {% block article %}
 {% paginate craft.entries.section('blog').limit(blogSettings.postsPerPage) as info, entries %}
 <div id="articleContainerList">
