--- a/templates/_includes/_top-bar.html
+++ b/templates/_includes/_top-bar.html
@@ -1,13 +1,27 @@
 {% block header %}
 <div id="topBar">
-  <div class="sideBySideContainer">
-    <div class="sideBySideItem">
+  <div id="topBarContainer">
+    <div class="pageLeftBlock">
+      1
     </div>
-    <div class="sideBySideItem">
-      <div id="pageNameHeading">Digikokki</div>
+    <div class="pageCenterBlock">
+      <div class="pageCenterBlockContainer">
+        <a href="/"><div id="pageNameHeading">Digikokki</div></a>
+      </div>
     </div>
-    <div class="sideBySideItem">
+    <div class="pageRightBlock">
+      3
     </div>
+    <!--div class="topBarItem">
+      <a href="/"><div id="pageNameHeading">Digikokki</div></a>
+    </div>
+    <div class="topBarItem">
+      <div class="newsLetter">
+        <label for="">Uutiskirje</label>
+        <input type="text" name="" value="" placeholder="sähköposti">
+        <button type="button" name="button">Tilaa</button>
+      </div>
+    </div-->
   </div>
 </div>
 {% endblock %}
