--- a/_src/scss/includes/_top-bar.scss
+++ b/_src/scss/includes/_top-bar.scss
@@ -6,9 +6,10 @@
 //Desktop
 @include respond-to($desktop) {
   #topBar{
-    display: block;
+    display: flex;
     position: fixed;
     width: 100%;
+    height: 60px;
     border-bottom: 1px solid #F3F3F3;
     background: white;
     z-index: 90;
@@ -16,12 +17,16 @@
       font-size: 1rem;
       @include font("Montserrat", 800);
       text-transform: uppercase;
-      padding: 18px 0px;
     }
+  }
+  #topBarContainer{
+    display: flex;
+    flex: 1 0 auto;
+    flex-direction: row;
   }
 }
 
-
+/*
 .sideBySideContainer{
   display: flex;
   flex: 1 0 auto;
@@ -39,10 +44,10 @@
       max-width: 920px;
       padding: 0 2em;
       margin: 0 auto;
-      padding-left: 120px;
     }
     &:nth-child(3){
       flex: 0 0 400px;
     }
   }
 }
+*/
