--- a/templates/_includes/_nav.html
+++ b/templates/_includes/_nav.html
@@ -4,7 +4,7 @@
     <div id="brandLogo">
       <a href="/"><img src="../img/digikokki-logo-test.svg"/></a>
     </div>
-    <div id="mobileNav">
+    <div id="mobileNav" @click="toggleClass()">
       valikko
     </div>
   </div>
