--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -18,6 +18,7 @@
   <main id="siteContainer">
     <div id="pageContent" class="pageCenterBlock">
       {% block main %}{% endblock %}
+      {% include "_includes/_footer.html" %}
     </div>
     <nav id="pageNav" class="pageLeftBlock">
       {% include "_includes/_nav.html" %}
