--- a/templates/artikkelit/_entry.html
+++ b/templates/artikkelit/_entry.html
@@ -10,7 +10,7 @@
   <div id="pageHeading" style="background:url({{featuredImage}});"></div>
 
 {% endif %}
-<div id="pageBody">
+<div id="pageBody" class="pageCenterBlockContainer">
   <article class="articleSingleContent">
     {% include "_includes/_article-header.html" with {'currentNav':'singleArticle'} %}
     <main class="articleListing">
