--- a/_src/scss/includes/_nav.scss
+++ b/_src/scss/includes/_nav.scss
@@ -38,7 +38,7 @@
     flex-direction: column;
     width: 100%;
     color: white;
-    transition: .2s ease-out all;
+    transition: .2s all bubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform: translateX(0%);
     ul{
       margin: 0;
