--- a/templates/_includes/_nav.html
+++ b/templates/_includes/_nav.html
@@ -1,21 +1,3 @@
 {% block sidebar %}
-<div id="pageNavContainer">
-  <div id="pageNavHeading">
-    <div id="brandLogo">
-      <a href="/"><img src="../img/digikokki-logo-test.svg"/></a>
-    </div>
-    <div id="mobileNav" @click="toggleClass()">
-      valikko
-    </div>
-  </div>
-  <div id="pageNavContent">
-    <ul class="siteLinkList" id="pageLinks">
-      <a href="#"><li><i class="fa fa-globe"></i> <span>Internet</span></li></a>
-      <a href="#"><li><i class="fa fa-html5"></i> <span>Html</span></li></a>
-      <a href="#"><li><i class="fa fa-css3"></i> <span>Css</span></li></a>
-      <a href="#"><li><i class="fa fa-code"></i> <span>Javascript</span></li></a>
-      <a href="#"><li><i class="fa fa-cogs"></i> <span>Koodarin työkalut</span></li></a>
-    </ul>
-  </div>
-</div>
+<div id="pageNavContainer"></div>
 {% endblock %}
