--- a/templates/_includes/_top-bar.html
+++ b/templates/_includes/_top-bar.html
@@ -1,27 +1,24 @@
 {% block header %}
 <div id="topBar">
   <div id="topBarContainer">
-    <div class="pageLeftBlock">
-      1
-    </div>
+    <div class="pageLeftBlock"></div>
     <div class="pageCenterBlock">
       <div class="pageCenterBlockContainer">
-        <a href="/"><div id="pageNameHeading">Digikokki</div></a>
+        <div id="topBarContent">
+          <div class="topBarItem">
+            <a href="/"><div id="pageNameHeading">Digikokki</div></a>
+          </div>
+          <div class="topBarItem">
+            <div class="newsLetter">
+              <label for="">Uutiskirje</label>
+              <input type="text" name="" value="" placeholder="sähköposti">
+              <button type="button" name="button">Tilaa</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="pageRightBlock">
-      3
-    </div>
-    <!--div class="topBarItem">
-      <a href="/"><div id="pageNameHeading">Digikokki</div></a>
-    </div>
-    <div class="topBarItem">
-      <div class="newsLetter">
-        <label for="">Uutiskirje</label>
-        <input type="text" name="" value="" placeholder="sähköposti">
-        <button type="button" name="button">Tilaa</button>
-      </div>
-    </div-->
+    <div class="pageRightBlock"></div>
   </div>
 </div>
 {% endblock %}
