--- a/_src/scss/includes/_article.scss
+++ b/_src/scss/includes/_article.scss
@@ -7,7 +7,6 @@
   margin-bottom: 110px;
   padding-bottom: 70px;
   margin: 0 auto;
-
   header{
     margin-bottom: 24px;
     h6{
@@ -167,6 +166,7 @@
     }
   }
   .articleSingleContent{
+    top: 4em;
     main{
       .articleContent{
         flex: 0 0 100%;
