--- a/templates/_includes/_footer.html
+++ b/templates/_includes/_footer.html
@@ -1,5 +1,5 @@
 {% block footer %}
 <footer class="pageFooter">
-  2017 © Digikokki.io <span></span>
+  2017 © Digikokki.io <span>🙌</span>
 </footer>
 {% endblock %}
