--- a/_src/scss/includes/_nav.scss
+++ b/_src/scss/includes/_nav.scss
@@ -2,8 +2,11 @@
 #pageNav{
   @include font("Montserrat");
   background-color: $brandColorDark;
-  transition: .2s ease-out all;
+
+
   transform: translateX(0%);
+  transition: all .2s ease-out;
+
   z-index: 100;
   display: flex;
   flex: 1;
@@ -95,18 +98,21 @@
 //Desktop
 @include respond-to($desktop) {
   #pageNav{
-    box-sizing: border-box;
+    height: 100vh;
+    top: 0;
+    z-index: 1000;
     flex: 0 0 70px;
-    position: fixed;
-    width: 70px;
-    height: 100%;
     justify-content: flex-start;
+    width: 70px;
+    left: 0px;
+    position: fixed;
+    overflow-y: scroll;
+    overflow-x: hidden;
     #pageNavHeading{
       padding: 0px 4px;
     }
     #brandLogo{
-      width: 80%;
-      margin: 10px auto 10px auto;
+      margin: 15px 0 10px 5px;
       border-radius: 100px;
       text-align: center;
     }
@@ -122,44 +128,60 @@
       color: white;
       font-size: 0.7em;
       .siteLinkList{
+        width: 260px;
         position: relative;
         margin: 20px 0px;
-        margin-top: 5px;
-        padding: 20px 0px 0px 0px;
+        margin-top: 0px;
+        padding-top: 30px;
         border-top: solid 1px $brandColorActive;
         a{
           text-transform: uppercase;
         }
         li{
+          position: relative;
+          display: block;
           margin-bottom: 20px;
-          text-align: center;
           padding: 10px;
+          transition: background .2s linear;
+          &:hover{
+              background: #2372b1;
+          }
+          /*
+          &:after {
+              content: "";
+              position: absolute;
+              width: 6px;
+              height: 6px;
+              left: 17px;
+              top: 7px;
+              display: block;
+              background: red;
+              -webkit-border-radius: 6px;
+              border: solid 2px #f8f8f8;
+          }
+          */
         }
         i{
+          position: absolute;
           font-size: 17px;
           color: white!important;
+          left: 27px;
+        }
+        span{
+          transition: color .2s;
+          color: rgba(148,152,160,0);
+          padding: 0 0 0 50px;
         }
       }
-      .siteLinkList{
-        a{
-          span{
-            position: absolute;
-            display: inline-block;
-            opacity:0;
-            transform: translateX(0px);
-            color: white;
-            z-index: 20;
-            transition: all 0.15s ease-in-out;
-          }
-          &:hover{
+    }
+    &:hover{
+      box-shadow: 3px 0 20px rgba(0, 0, 0, 0.2);
+      width: 260px;
+      #pageNavContent{
+        .siteLinkList{
+          a{
             span{
-              color: rgba(0,0,0,.44);
-              display: inline-block;
-              margin-left: 15px;
-              width: 150px;
-              opacity:1;
-              text-align: left;
-              transform: translateX(30px);
+              color: white;
             }
           }
         }
