--- a/web/css/main.bundle.css
+++ b/web/css/main.bundle.css
@@ -1973,7 +1973,8 @@ footer {
     margin: 0 auto;
     height: 100%;
     align-self: flex-start;
-    margin: 0; }
+    margin: 0;
+    display: block; }
     #pageNav #brandLogo img:not(.png) {
       width: 70%; }
     #pageNav #brandLogo p {
@@ -2042,10 +2043,6 @@ footer {
     overflow-x: hidden; }
     #pageNav #pageNavHeading {
       padding: 0px 4px; }
-    #pageNav #brandLogo {
-      margin: 15px 0 10px 5px;
-      border-radius: 100px;
-      text-align: center; }
     #pageNav #mobileNav {
       display: none;
       color: white;
@@ -2061,32 +2058,30 @@ footer {
         position: relative;
         margin: 20px 0px;
         margin-top: 0px;
-        padding-top: 30px;
+        padding-top: 10px;
         border-top: solid 1px #0151A4; }
         #pageNav #pageNavContent .siteLinkList a {
           text-transform: uppercase; }
         #pageNav #pageNavContent .siteLinkList li {
           position: relative;
           display: block;
-          margin-bottom: 20px;
+          margin-bottom: 13px;
           padding: 10px;
-          transition: background .2s linear;
-          /*
-          &:after {
-              content: "";
-              position: absolute;
-              width: 6px;
-              height: 6px;
-              left: 17px;
-              top: 7px;
-              display: block;
-              background: red;
-              -webkit-border-radius: 6px;
-              border: solid 2px #f8f8f8;
-          }
-          */ }
+          transition: background .2s linear; }
           #pageNav #pageNavContent .siteLinkList li:hover {
             background: #2372b1; }
+          #pageNav #pageNavContent .siteLinkList li#brandLogo {
+            width: 260px;
+            padding-bottom: 19px;
+            padding-top: 13px;
+            border-bottom: 1px solid #0151A4; }
+            #pageNav #pageNavContent .siteLinkList li#brandLogo:hover {
+              background: none; }
+        #pageNav #pageNavContent .siteLinkList img {
+          width: 50px;
+          position: absolute;
+          left: 10px;
+          top: -5px; }
         #pageNav #pageNavContent .siteLinkList i {
           position: absolute;
           font-size: 17px;
@@ -2486,5 +2481,48 @@ input {
     padding: 0 2em;
     margin: 0 auto;
     padding-left: 120px; } }
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+.main-head {
+  grid-area: header; }
+
+.content {
+  grid-area: content; }
+
+.main-nav {
+  grid-area: nav; }
+
+.side {
+  grid-area: sidebar; }
+
+.ad {
+  grid-area: ad; }
+
+.main-footer {
+  grid-area: footer; }
+
+#app {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-areas: "header" "nav" "content" "sidebar" "ad" "footer"; }
+
+@media (min-width: 500px) {
+  #app {
+    grid-template-columns: 1fr 3fr;
+    grid-template-areas: "header  header" "nav     nav" "sidebar content" "ad      footer"; }
+  nav ul {
+    display: flex;
+    justify-content: space-between; } }
+
+@media (min-width: 700px) {
+  #app {
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-areas: "header header  header" "nav    content sidebar" "nav    content ad" "footer footer  footer"; }
+  nav ul {
+    flex-direction: column; } }
 
 /*# sourceMappingURL=main.bundle.css.map*/
