--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -12,20 +12,21 @@
 {% endif %}
 
 {% block body %}
-
-  {% include "_includes/_top-bar.html" %}
-  <div id="app">
-  <main id="siteContainer">
-    <nav id="pageNav" class="pageLeftBlock">
-      {% include "_includes/_nav.html" %}
-    </nav>
-    <div id="pageContent" class="pageCenterBlock">
-      {% block main %}{% endblock %}
-      {% include "_includes/_footer.html" %}
-    </div>
-    <aside id="pageSidebar" class="pageRightBlock">
-      {% include "_includes/_sidebar.html" %}
-    </aside>
-  </main>
-  </div>
+<div id="app">
+  <header class="main-head">The header</header>
+  <nav class="main-nav">
+      <ul>
+          <li><a href="">Nav 1</a></li>
+          <li><a href="">Nav 2</a></li>
+          <li><a href="">Nav 3</a></li>
+      </ul>
+  </nav>
+  <article class="content">
+    <h1>Main article area</h1>
+    <p>In this layout, we display the areas in source order for any screen less that 500 pixels wide. We go to a two column layout, and then to a three column layout by redefining the grid, and the placement of items on the grid.</p>
+  </article>
+  <aside class="side">Sidebar</aside>
+  <div class="ad">Advertising</div>
+  <footer class="main-footer">The footer</footer>
+</div>
 {% endblock %}
